integration-tests/unexpected-patch-creation-failure/__snapshots__/unexpected-patch-creation-failure.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test unexpected-patch-creation-failure: 00: yarn-berry-patch-package fails to parse a patch it created 1`] = `
"SNAPSHOT: yarn-berry-patch-package fails to parse a patch it created
yarn-berry-patch-package 0.0.0
• Creating temporary folder
YAMLParseError: Implicit keys need to be on a single line at line 16, column 3:

ansi-styles@^4.1.0:
  version \\"4.3.0\\"
  ^

    at Composer.onError (/tmp/tmp-43185-C9BvAxRcMP9f/node_modules/yaml/dist/compose/composer.js:70:34)
    at Object.resolveBlockMap (/tmp/tmp-43185-C9BvAxRcMP9f/node_modules/yaml/dist/compose/resolve-block-map.js:48:17)
    at resolveCollection (/tmp/tmp-43185-C9BvAxRcMP9f/node_modules/yaml/dist/compose/compose-collection.js:13:27)
    at Object.composeCollection (/tmp/tmp-43185-C9BvAxRcMP9f/node_modules/yaml/dist/compose/compose-collection.js:59:16)
    at composeNode (/tmp/tmp-43185-C9BvAxRcMP9f/node_modules/yaml/dist/compose/compose-node.js:33:38)
    at Object.resolveBlockMap (/tmp/tmp-43185-C9BvAxRcMP9f/node_modules/yaml/dist/compose/resolve-block-map.js:85:19)
    at resolveCollection (/tmp/tmp-43185-C9BvAxRcMP9f/node_modules/yaml/dist/compose/compose-collection.js:13:27)
    at Object.composeCollection (/tmp/tmp-43185-C9BvAxRcMP9f/node_modules/yaml/dist/compose/compose-collection.js:59:16)
    at Object.composeNode (/tmp/tmp-43185-C9BvAxRcMP9f/node_modules/yaml/dist/compose/compose-node.js:33:38)
    at Object.composeDoc (/tmp/tmp-43185-C9BvAxRcMP9f/node_modules/yaml/dist/compose/compose-doc.js:35:23) {
  code: 'MULTILINE_IMPLICIT_KEY',
  pos: [ 510, 767 ],
  linePos: [ { line: 16, col: 3 }, { line: 19, col: 15 } ]
}
Error: Could not parse Yarn v4 lock file
    at Object.getPackageResolution (/tmp/tmp-43185-C9BvAxRcMP9f/node_modules/yarn-berry-patch-package/dist/getPackageResolution.js:34:15)
    at Object.makePatch (/tmp/tmp-43185-C9BvAxRcMP9f/node_modules/yarn-berry-patch-package/dist/makePatch.js:102:63)
    at /tmp/tmp-43185-C9BvAxRcMP9f/node_modules/yarn-berry-patch-package/dist/index.js:71:25
    at Array.forEach (<anonymous>)
    at Object.<anonymous> (/tmp/tmp-43185-C9BvAxRcMP9f/node_modules/yarn-berry-patch-package/dist/index.js:70:22)
    at Module._compile (node:internal/modules/cjs/loader:1761:14)
    at Object..js (node:internal/modules/cjs/loader:1893:10)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
END SNAPSHOT"
`;
